# Test-Learn

./: pyproject.toml
Python-Refresher/: Introduction_1.py  ML_Overview.ipynb
notebooks/: testnb.ipynb
src/testlearn/: operations.py
src/testlearn.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test-practice/: check.py
