[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "testlearn"
version = "0.1.0"
description = "A test package for learning"
authors = [{ name = "Praise" }]
readme = "README.md"
requires-python = ">=3.7"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
